More work on PCG Caves.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/EssentialUE5PCG/Levels/PCGCavesExample.PCGCavesExample
+EditorStartupMap=/Game/EssentialUE5PCG/Levels/PCGCavesExample.PCGCavesExample
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
@@ -30,6 +31,9 @@ r.DefaultFeature.AutoExposure.Method=2
 r.AntiAliasingMethod=3
 r.ForwardShading=True
 r.Nanite.ProjectEnabled=False
+r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AmbientOcclusionStaticFraction=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
