--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/EssentialUE5PCG/Levels/PCGCavesExample.PCGCavesExample
-EditorStartupMap=/Game/EssentialUE5PCG/Levels/PCGCavesExample.PCGCavesExample
+GameDefaultMap=/Game/EssentialUE5PCG/Levels/PCGMeshLandscapeExample.PCGMeshLandscapeExample
+EditorStartupMap=/Game/EssentialUE5PCG/Levels/PCGMeshLandscapeExample.PCGMeshLandscapeExample
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
